removed container due to streching issue, added overflow to input and some borders

--- a/Project/public/css/style.css
+++ b/Project/public/css/style.css
@@ -1,23 +1,21 @@
 p{margin: 0;}
-.container{
-    margin:0px;
-    width:100%;
-	height: 100vh;
-}
 
 #message-input{
 	width: 83.4%;
 	border: solid 1px black;
 	border-radius: 5px;
-}
+    overflow-x: auto;
+
+    }
 #send-button{
 	width: 15%;
 	border: solid 1px black;
 	border-radius: 5px;
 }
 .grid-container {
-	height: 100%;
+	height: 100vh;
     width:100%;
+    margin: 0;
 	display: grid;
 	grid-template-columns: 0.2fr 0.2fr 1fr 0.2fr ;
 	grid-template-rows: 0.1fr 1fr 0.1fr;
@@ -30,11 +28,14 @@ p{margin: 0;}
 	width: 100%;
 	border: solid 1px black;
 	border-radius: 5px;
+    overflow-x: auto;
+
 }
 
 .message {
+    padding-left: 5px;
 	grid-area: message;
-	background: darksalmon;
+	background: #36393f;
 }
 
 .messages {
@@ -57,21 +58,28 @@ p{margin: 0;}
 	background: #202225;
 }
 
-#add-group { grid-area: add-group; }
-#logo { 
+#add-group {
+    grid-area: add-group;
+    padding: 5px;
+    background: #202225;
+}
+#logo {
     color: #FFFFFF;
     background: #202225;
     grid-area: logo;
 }
-#currentserver { 
+#currentserver {
     grid-area: currentserver;
     color: #FFFFFF;
     background: #2f3136;
+    border-bottom: solid 1px black;
+
 }
 #currentchannel {
     color: #FFFFFF;
     background: #36393f;
     grid-area: currentchannel;
+    border-bottom: solid 1px black;
 }
 
 #message-box {
